[tool.poetry]
name = "panoramic"
version = "0.1.0"
description = ""
authors = ["Aristotelis T."]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.10.0"
segmentation-models-pytorch = "^0.3.4"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
